change of post1

--- a/_posts/2015-8-30-Week-1-Post.md
+++ b/_posts/2015-8-30-Week-1-Post.md
@@ -3,7 +3,14 @@ layout: post
 title: Week 1 Post
 ---
 
-CS371....
+Coming into Object-Oriented Programming(CS371p) I wasn't quite sure what to expect. Professor Glenn Downing had great reviews on various websites and some of my brighter friends in the CS department highly suggested I take his courses, or were taking the courses themselves. I was also advised to consider the workload as it was known to be quite intense. At the course start point the syllabus reads 7000 lines of code, which is probably the most I've seen on any course, although it does seem manageable. 
+
+Now that we are one week into the class it appears as if I've made the right decision. The two lectures Professor Downing has given thus far have been very clear. Even when we are discussing simple topics such as the use of "cout", include statements, or the increment operator, I feel as though I'm learning interesting points. A completely new tool Professor Downing has been demonstrating is GoogleTest (a c++ framework for testing). In previous courses I've used asserts for debugging and removed them when the code was functional. However, now with this new knowledge I can see how much more powerful testing can be. 
+
+Another interesting portion of Professor Downing's approach to teaching involves calling out students at random. The person being called upon walks the professor and the class through the given example. Although its a bit nerve-racking it appears to keep everyone involved. It also seems as though listening to a different person explain a concept could be beneficial as well. Finally, it is interesting to note that Professor Downing explains concepts very thoroughly and as his last point is completed, he ends the class with a mic drop...
+
+Tip of the week:
+
 
 ![_config.yml]({{ site.baseurl }}/images/config.png)
 
