--- a/_posts/2015-8-30-Week-1-Post.md
+++ b/_posts/2015-8-30-Week-1-Post.md
@@ -14,4 +14,4 @@ Tip of the week:
 
 ![_config.yml]({{ site.baseurl }}/images/config.png)
 
-Ethics article[link](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found interesting. 
+[Ethics article](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found interesting. 
