adding week 2 blog post

--- a/_posts/2015-9-06-Week-2-Post.md
+++ b/_posts/2015-9-06-Week-2-Post.md
@@ -5,7 +5,7 @@ title: Week 2 Post
 
 This is my second blog post on my experience in Glenn Downing's Object Oriented Programming class. At this stage of the game the experience of being called out has become second nature and does not seem to be bothering most people any longer. We have also been introduced to our first project and have had several in-class discussions about the required tool-chain for the rest of the semester. In addition to this, we have also had several online readings including the first two chapters of the book. Overall, expectations have been very clear and course material (including lectures) have also been top-notch. 
 
-One issue that I did have was with the study session. On Professor Downing's calendar the study session was set for Tuesday, September 1st. However, one of my classmates and I waited for no reason as it was listed incorrectly with the first session actually beginning on Thursday, September 3rd. My issue was minor and with ample time left for completion of the project, it was not much of an issue. In addition, I did attend the Thursday session and the TA was on time and had the answers I was looking for. 
+One issue that I did have was with the study session. On Professor Downing's calendar the study session was set for Tuesday, September 1st. However, one of my classmates and I waited for no reason as it was listed incorrectly with the first session actually beginning on Thursday, September 3rd. Having said that, my issue was minor and with ample time left for completion of the project, it was not much of an issue. In addition, I did attend the Thursday session and the TA was on time and had the answers I was looking for. 
 
 As I mentioned earlier, we are diving into the first project (with some folks already finished). In our last lecture of the week Professor Downing demonstrated how caching some data can drastically increase the performance of our program. Some folks will probably reconsider what they've done thus far with their caching in order to increase their performance. Given the discussions on caching my tip of the week is about caching. Although our program is simple and will probably not run into any of these issues here is [an article](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found interesting.  with some thoughts on possible issues with caching. 
 
