--- a/_posts/2015-9-06-Week-2-Post.md
+++ b/_posts/2015-9-06-Week-2-Post.md
@@ -14,6 +14,6 @@ Tip of the week:
 Mentioned above [link to article once again](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found interesting. 
 
 Tip of the week2:
-A second tip of the week is about blog reach. I added some GA tags to my site in order to see how many classmates were actually visiting my blog. It turns out I had over 7 hours of folks on my site (users * avg_usertime). Although many people probably left the window open and walked away from their PC, it was interesting to see the reach a blog can have. Here are some stats from GA on week 1...
+A second tip of the week is about blog reach. I added some GA tags to my site in order to see how many classmates were actually visiting my blog. It turns out I had over 7 hours of folks on my site (sessions * avg_sessiontime). Although many people probably left the window open and walked away from their PC, it was interesting to see the reach a blog can have. Here are some stats from GA on week 1...
 
 ![stats]({{ site.url }}/images/week1_stats.png)
