--- a/_posts/2015-9-06-Week-2-Post.md
+++ b/_posts/2015-9-06-Week-2-Post.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 2 Post
 ---
 
-This is my second blog post on my experience in Glenn Downing's Object Oriented Programming class. At this stage of the game the experience of being called out has become second nature and does not seem to be bothering most people any longer. We have also been introduced to our first project and have had several in-class discussions about the required tool-chain for the rest of the semester. In addition to this, we have also had several online readings including the first two chapters of the book. Overall, expectations have been very clear and course material (including lectures) have also been top-notch. 
+This is my second blog post on my experience in Glenn Downing's Object Oriented Programming class. At this stage of the game the experience of being called out in class has become second nature and does not seem to be bothering most people any longer. We have also been introduced to our first project and have had several in-class discussions about the required tool-chain for the rest of the semester. In addition to this, we have also had several online readings including the first two chapters of the book. Overall, expectations have been very clear and course material (including lectures) have also been top-notch. 
 
 One issue that I did have was with the study session. On Professor Downing's calendar the study session was set for Tuesday, September 1st. However, one of my classmates and I waited for no reason as it was listed incorrectly with the first session actually beginning on Thursday, September 3rd. Having said that, my issue was minor and with ample time left for completion of the project, it was not much of an issue. In addition, I did attend the Thursday session and the TA was on time and had the answers I was looking for. 
 
