--- a/_posts/2015-9-06-Week-2-Post.md
+++ b/_posts/2015-9-06-Week-2-Post.md
@@ -7,11 +7,11 @@ This is my second blog post on my experience in Glenn Downing's Object Oriented 
 
 One issue that I did have was with the study session. On Professor Downing's calendar the study session was set for Tuesday, September 1st. However, one of my classmates and I waited for no reason as it was listed incorrectly with the first session actually beginning on Thursday, September 3rd. Having said that, my issue was minor and with ample time left for completion of the project, it was not much of an issue. In addition, I did attend the Thursday session and the TA was on time and had the answers I was looking for. 
 
-As I mentioned earlier, we are diving into the first project (with some folks already finished). In our last lecture of the week Professor Downing demonstrated how caching some data can drastically increase the performance of our program. Some folks will probably reconsider what they've done thus far with their caching in order to increase their performance. Given the discussions on caching my tip of the week is about caching. Although our program is simple and will probably not run into any of these issues, here is [an article](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found to be interesting.  with some thoughts on possible issues with caching. 
+As I mentioned earlier, we are diving into the first project (with some folks already finished). In our last lecture of the week Professor Downing demonstrated how caching some data can drastically increase the performance of our program. Some folks will probably reconsider what they've done thus far with their caching in order to increase their performance. Given the discussions on caching my tip of the week is about caching. Although our program is simple and will probably not run into any of these issues, here is [an article](https://msol.io/blog/tech/2015/09/05/youre-probably-wrong-about-caching/) I found to be interesting.  with some thoughts on possible issues with caching. 
 
 
 Tip of the week:
-Mentioned above [link to article once again](http://mikecavaliere.com/ethics-for-freelance-programmers/) I found interesting. 
+Mentioned above [link to article once again](https://msol.io/blog/tech/2015/09/05/youre-probably-wrong-about-caching/) I found interesting. 
 
 Tip of the week2:
 A second tip of the week is about blog reach. I added some GA tags to my site in order to see how many classmates were actually visiting my blog. It turns out I had over 7 hours of folks on my site (sessions * avg_sessiontime). Although many people probably left the window open and walked away from their PC, it was interesting to see the reach a blog can have. Here are some stats from GA on week 1...
