--- a/_posts/2015-10-11-Week-7-Post.md
+++ b/_posts/2015-10-11-Week-7-Post.md
@@ -16,7 +16,7 @@ I think this is completely reasonable for someone to complain about. Especially 
 
 The following code works as expected (-std=c++11). 
 
-
+{% highlight c++ %}
 #include <iostream>
 #include <array>
 
@@ -35,7 +35,7 @@ int main(int argc, char **argv){
 	functionHere(myArray);
 	return 0;
 }
-
+{% endhighlight %}
 
 Finally, we also had an exam this week. It was nice to have the following day (Friday) off as it allowed many of us to catch up on other classes. The test was reasonable and the time allotted was sufficient. Not sure if I'm allowed to say anything else so I'll leave it at that. 
 
