--- a/_posts/2015-10-11-Week-7-Post.md
+++ b/_posts/2015-10-11-Week-7-Post.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 7 Post
 ---
 
-With week 7 now complete in Professor Downing's Object Oriented Programming class, we have tied together the idea of iterators and containers. Our simple range_iterator was now made to live inside of a Range class and the range_iterator is now simply known as iterator. When only looking at one area it is sometimes difficult to see how the pieces fit. Now that all of these pieces are together, I believe it is much easier to see how things work.
+With week 7 now complete in Professor Downing's Object Oriented Programming class, we have tied together the idea of iterators and containers. Our simple rangeiterator was now made to live inside of a Range class and the range_iterator is now simply known as iterator. When only looking at one area it is sometimes difficult to see how the pieces fit. Now that all of these pieces are together, I believe it is much easier to see how things work.
 
 In addition to the iterator discussion, we spoke about arrays and how passing arrays into functions can sometimes be misleading. Luke (a classmate) posted the following [link](https://lkml.org/lkml/2015/9/3/428) where Linus Torvalds calls the following "_shit_".
 
