--- a/_posts/2015-11-01-Week-10-Post.md
+++ b/_posts/2015-11-01-Week-10-Post.md
@@ -11,5 +11,4 @@ Our discussion on Friday was also interesting, because we discussed the use of t
 
 
 Tip of the week:
-If you are interested in insane cellular automata check out [this video](https://www.youtube.com/watch?v=C2vgICfQawE).
-
+If you are interested in insane cellular automata check out [this video](https://www.youtube.com/watch?v=C2vgICfQawE) (interesting portion after minute 2).
