--- a/_posts/2015-11-08-Week-11-Post.md
+++ b/_posts/2015-11-08-Week-11-Post.md
@@ -3,9 +3,9 @@ layout: post
 title: Week 11 Post
 ---
 
-With week 11 now complete in Professor Downing's Object Oriented Programming class we are less than one month from the end of the semester. During the week we discussed constructors(and destructors) and their relationships when initializing(or terminating) objects. We also discussed the optimizations that can be obtained with initialization lists. Another cool topic was the magic of using STL containers as backing containers and doing all of the heavy lifting for us. Week 12 looks to bring a discussion on inheritance which should be interesting. In the past I've heard that inheritance isn't really used in industry too much, so I'm eager to hear Professor Downing's take on this. As an example (Go has no type-based inheritance)[http://talks.golang.org/2012/splash.article#TOC_15.] which is interesting as Ken Thompson is a key designer.
+With week 11 now complete in Professor Downing's Object Oriented Programming class we are less than one month from the end of the semester. During the week we discussed constructors(and destructors) and their relationships when initializing(or terminating) objects. We also discussed the optimizations that can be obtained with initialization lists. Another cool topic was the magic of using STL containers as backing containers and doing all of the heavy lifting for us. Week 12 looks to bring a discussion on inheritance which should be interesting. In the past I've heard that inheritance isn't really used in industry too much, so I'm eager to hear Professor Downing's take on this. As an example [Go has no type-based inheritance](http://talks.golang.org/2012/splash.article#TOC_15.) which is interesting as Ken Thompson is a key designer.
 
 Another thing that I found interesting this week was the Article "The Joel Test". In the article, Joel discusses "The 12 steps to better code". The (article)[http://www.joelonsoftware.com/articles/fog0000000043.html] is interesting and has valid points, but has a really interesting flaw.. Several links are broken in this article! I understand the article is from August 9, 2000, but isn't this one of the problems with the software he discusses? Maintaining code is almost as important as writing it, and Joel seems to have not maintained the links. HTML may not be "code" in the same sense as c++ but at the end of the day a 404 seems like a runtime error to me. 
 
 Tip of the week:
-(Impressive Facebook AI)[https://www.youtube.com/watch?v=U_Wgc1JOsBk]
+[Impressive Facebook AI](https://www.youtube.com/watch?v=U_Wgc1JOsBk)
