--- a/_posts/2015-11-08-Week-11-Post.md
+++ b/_posts/2015-11-08-Week-11-Post.md
@@ -8,4 +8,4 @@ With week 11 now complete in Professor Downing's Object Oriented Programming cla
 Another thing that I found interesting this week was the Article "The Joel Test". In the article, Joel discusses "The 12 steps to better code". The (article)[http://www.joelonsoftware.com/articles/fog0000000043.html] is interesting and has valid points, but has a really interesting flaw.. Several links are broken in this article! I understand the article is from August 9, 2000, but isn't this one of the problems with the software he discusses? Maintaining code is almost as important as writing it, and Joel seems to have not maintained the links. HTML may not be "code" in the same sense as c++ but at the end of the day a 404 seems like a runtime error to me. 
 
 Tip of the week:
-[Impressive Facebook AI](https://www.youtube.com/watch?v=U_Wgc1JOsBk)
+Check out an [Impressive Facebook AI](https://www.youtube.com/watch?v=U_Wgc1JOsBk)
