adding week 2 post

--- a/_posts/2016-9-03-Week-2-Post.md
+++ b/_posts/2016-9-03-Week-2-Post.md
@@ -29,7 +29,7 @@ at least temporarily."
 
 Which brings the following xkcd to mind...
 
-![xkcd](https://github.com/ace-jc/ace-jc.github.io/blob/master/images/step1.gif){:class="img-responsive"}
+![xkcd](/images/step1.gif){:class="img-responsive"}
 
 ***
 
