adding week 2 post

--- a/_posts/2016-9-03-Week-2-Post.md
+++ b/_posts/2016-9-03-Week-2-Post.md
@@ -29,7 +29,7 @@ at least temporarily."
 
 Which brings the following xkcd to mind...
 
-![xkcd](/images/step1.gif){:class="img-responsive"}
+![stats]({{ site.url }}/images/week1_stats.png)
 
 ***
 
