adding week 2 image

--- a/_posts/2016-9-03-Week-2-Post.md
+++ b/_posts/2016-9-03-Week-2-Post.md
@@ -34,4 +34,4 @@ Which brings the following xkcd to mind...
 ***
 
 **Tip of the week:**
-I found an interesting [neural network visualization tool](http://scs.ryerson.ca/~aharley/vis/fc/). When you write a number on the square in the upper left hand side it gives you the best guess of the that number. The unique thing about this site is the visualization of the entire neuron graph!
+I found an interesting [neural network visualization tool](http://scs.ryerson.ca/~aharley/vis/fc/). When you write a number on the square in the upper left hand side it gives you the best guess of the number you wrote. The unique thing about this site is the visualization of the entire neuron graph as it is "thinking". 
