--- a/_posts/2016-9-03-Week-2-Post.md
+++ b/_posts/2016-9-03-Week-2-Post.md
@@ -12,7 +12,7 @@ This past week I spent some time becoming more familiar with Python. I was surpr
 
 **What's in your way?**
 
-At this point I'm feeling pretty confident about python and docker. I think the next obstacle might be javascript. I've been doing the readings and the author seems to suggest that javascript has many design flaws. It is quite incredible that javascript is very heavily critized for its design, yet it remains one of the most (if not the most) popular languages in the world. 
+At this point I'm feeling pretty confident about python and docker. I think the next obstacle might be javascript. I've been doing the readings and the author seems to suggest that javascript has many design flaws. It is quite incredible that javascript is very heavily criticized for its design, yet it remains one of the most (if not the most) popular languages in the world. 
 
 **What will you do next week?**
 
@@ -35,3 +35,4 @@ Which brings the following xkcd to mind...
 
 **Tip of the week:**
 I found an interesting [neural network visualization tool](http://scs.ryerson.ca/~aharley/vis/fc/). When you write a number on the square in the upper left hand side it gives you the best guess of the number you wrote. The unique thing about this site is the visualization of the entire neuron graph as it is "thinking". 
+
