--- a/_posts/2016-9-11-Week-3-Post.md
+++ b/_posts/2016-9-11-Week-3-Post.md
@@ -24,11 +24,12 @@ My impression of python thus far is of wonder. At some moments professor Downing
 
 We also had the following interesting bit of code in class. In this example we create a tuple with some values, then "copy" the contents using the "[:]" operator. Then we check the type of b and it turns out it isn't a list despite the operator. Somehow it remains a tuple. 
 
->>> a = (2,3,4)
->>> b = a[:]
->>> print(type(b))
+{% highlight python %}
+a = (2,3,4)
+b = a[:]
+print(type(b))
 <class 'tuple'>
-
+{% endhighlight %}
 
 ***
 
