--- a/_posts/2016-9-11-Week-3-Post.md
+++ b/_posts/2016-9-11-Week-3-Post.md
@@ -8,7 +8,7 @@ title: Week 3 Post
 
 **What did you do this past week?**
 
-This past week I wrapped up some lose ends with my collatz project and submitted it for grading. I was also able to attend the Engineering Expo. Overall the Expo is very similar to the CNS Career Fair with the exception that many companies are also looking for other engineering disciplines. The size is about the same as the CNS Career Fair with two upper floors and the court filled with booths. It was a good event and I'm glad professor Downing pushes students to attend both events. 
+This past week I wrapped up some loose ends with my collatz project and submitted it for grading. I was also able to attend the Engineering Expo. Overall the Expo is very similar to the CNS Career Fair with the exception that many companies are also looking for other engineering disciplines. The size is about the same as the CNS Career Fair with two upper floors and the court filled with booths. It was a good event and I'm glad professor Downing pushes students to attend both events. 
 
 **What's in your way?**
 
