week 5 spell check

--- a/_posts/2016-9-25-Week-5-Post.md
+++ b/_posts/2016-9-25-Week-5-Post.md
@@ -20,7 +20,7 @@ For this coming week I have nothing due for Software Engineering, but I do have 
 
 ***
 
-The big hurdle this past week was the Career fair and associated events. On Monday I attended the security dinner which was interesting and had good food. Initially I was on a table which just happened to receive Alex Menzies from JPL. He answered many of our questions and showed us some cool demos on his machine. Other organization with a bigger focus on security were also there and it was quite interesting to hear from them. On Tuesday it was non-stop with an early brunch followed by a Career Fair that lasted until 6pm. At the end of the day I was exhausted, but happy with the number of organizations I was able to meet with.
+The big hurdle this past week was the Career fair and associated events. On Monday I attended the security dinner which was interesting and had good food. Initially I was on a table which just happened to receive Alex Menzies from JPL. He answered many of our questions and showed us some cool demos on his machine. Other organizations with a bigger focus on security were also there and it was quite interesting to hear from them. On Tuesday it was non-stop with an early brunch followed by a Career Fair that lasted until 6pm. At the end of the day I was exhausted, but happy with the number of organizations I was able to meet with.
 
 ***
 
