--- a/_posts/2016-10-02-Week-6-Post.md
+++ b/_posts/2016-10-02-Week-6-Post.md
@@ -1,4 +1,4 @@
--
+---
 layout: post
 title: Week 6 Post
 ---
@@ -8,7 +8,7 @@ title: Week 6 Post
 
 **What did you do this past week?**
 
-This past week was more of a normal week in Software Engineering. It started on Monday with a discussion on list, set and dict comprehensions and continued onto the topic of Generators. We saw some examples of each and on Wednesday increased our understanding with a discussion of yield and its relationship with the general notion of a generator. On Friday we discussed Range() and how one would build an iterator over Range(). The in-class excercise was to do build a Rangeiterator with both a class and with just a function. 
+This past week was more of a normal week in Software Engineering. It started on Monday with a discussion on list, set and dict comprehensions and continued onto the topic of Generators. We saw some examples of each and on Wednesday increased our understanding with a discussion of yield and its relationship with the general notion of a generator. On Friday we discussed Range() and how one would build an iterator over Range(). The in-class exercise was to do build a Rangeiterator with both a class and with just a function. 
 
 **What's in your way?**
 
@@ -20,7 +20,7 @@ Given that next week we have our software engineering exam, I will be focusing m
 
 ***
 
-I may have missed the notion of a generator in my programming classes but I have never seen this before. It is a very interesting concept to save the work for later (be lazy). I think I have seen it in terms of only computing something when you need it, but don't remember ever seeing it this explict. 
+I may have missed the notion of a generator in my programming classes but I have never seen this before. It is a very interesting concept to save the work for later (be lazy). I think I have seen it in terms of only computing something when you need it, but don't remember ever seeing it this explicit. 
 
 Also, one area where it might seem like generators might be a nightmare would be in multi-threading. Since the state of the generator may change, some threads might be expecting some result and instead would receive another. Although since the iteration actually ends with an exception being raised it may not be too bad. 
 
@@ -28,3 +28,5 @@ Also, one area where it might seem like generators might be a nightmare would be
 
 **Tip of the week:**
 Interesting read.. [Why kernel development still uses email](https://lwn.net/SubscriberLink/702177/e2712c9c41c0c683/)
+
+
