--- a/_posts/2016-11-06-Week-11-Post.md
+++ b/_posts/2016-11-06-Week-11-Post.md
@@ -34,7 +34,7 @@ Missions to Mars are difficult. Since the 1960's the following table shows the o
 (OUTCOMES)
 Successful - 17
 Mostly successful - 2
-Operational - 8
+Operational - 8a
 Launch failure - 10
 Spacecraft failure - 14
 Partial failure - 4
