--- a/_posts/2016-11-06-Week-11-Post.md
+++ b/_posts/2016-11-06-Week-11-Post.md
@@ -32,12 +32,19 @@ Once my back-end tasks were completed I tried to help with front-end code and re
 Missions to Mars are difficult. Since the 1960's the following table shows the outcomes for each of the missions [List of missions to Mars](https://en.wikipedia.org/wiki/List_of_missions_to_Mars).
 
 (OUTCOMES)
+
 Successful - 17
+
 Mostly successful - 2
-Operational - 8a
+
+Operational - 8
+
 Launch failure - 10
+
 Spacecraft failure - 14
+
 Partial failure - 4
+
 
 total missions - 55
 
