--- a/_posts/2016-11-06-Week-11-Post.md
+++ b/_posts/2016-11-06-Week-11-Post.md
@@ -33,7 +33,7 @@ Missions to Mars are difficult. Since the 1960's the following table shows the o
 
 (OUTCOMES)
 
-Successful - 17
+Successful - 17<br />
 Mostly successful - 2
 Operational - 8
 Launch failure - 10
