--- a/_posts/2016-11-06-Week-11-Post.md
+++ b/_posts/2016-11-06-Week-11-Post.md
@@ -33,12 +33,12 @@ Missions to Mars are difficult. Since the 1960's the following table shows the o
 
 (OUTCOMES)
 
-Successful - 17<br />
-Mostly successful - 2
-Operational - 8
-Launch failure - 10
-Spacecraft failure - 14
-Partial failure - 4
+Successful - 17 <br />
+Mostly successful - 2 <br />
+Operational - 8 <br />
+Launch failure - 10 <br />
+Spacecraft failure - 14 <br />
+Partial failure - 4 <br />
 
 total missions - 55
 
